--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "landscape",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start:dev": "ts-node .",
+    "start:prod": "node dist"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/mpoc/landscape/issues"
   },
-  "homepage": "https://github.com/mpoc/landscape#readme"
+  "homepage": "https://github.com/mpoc/landscape#readme",
+  "devDependencies": {
+    "@tsconfig/node18": "^1.0.0",
+    "@types/node": "^17.0.30",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
+  }
 }
