--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
-    "start:dev": "ts-node .",
-    "start:prod": "node dist"
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
+    "build": "spack",
+    "serve": "serve",
+    "watch": "nodemon -w src -e js,json,ts -x \"npm run build\"",
+    "prestart:prod": "npm run build",
+    "start:prod": "npm run serve",
+    "start:dev": "concurrently \"npm:watch\" \"npm:serve\""
   },
   "repository": {
     "type": "git",
@@ -19,9 +24,19 @@
   },
   "homepage": "https://github.com/mpoc/landscape#readme",
   "devDependencies": {
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.2.174",
     "@tsconfig/node18": "^1.0.0",
     "@types/node": "^17.0.30",
+    "@types/three": "^0.139.0",
+    "concurrently": "^7.1.0",
+    "nodemon": "^2.0.16",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "serve": "^13.0.2",
+    "three": "^0.140.0"
   }
 }
