--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,7 @@
 {
     "extends": "@tsconfig/node18/tsconfig.json",
+    "compilerOptions": {
+        "lib": [ "es2021", "dom" ],
+        "target": "es2021"
+    }
 }
